assets folder added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="Assets/le mans logo3.png" type="png">
+    <link rel="icon" href="Assets/le_mans_logo3.png" type="png">
     <title>100 Years of LeMans</title>
 
     <section class="timeline">
