updating css and html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Assets/le mans logo3.png" type="png">
     <title>100 Years of LeMans</title>
+</head>
 
+<body>
+    <div id="decades-navigation">
+        <h1>The 1920s</h1>
+        <h1>The 1930s</h1>
+        <h1>The 1940s</h1>
+        <h1>The 1950s</h1>
+        <h1>The 1960s</h1>
+        <h1>The 1970s</h1>
+        <h1>The 1980s</h1>
+        <h1>The 1990s</h1>
+        <h1>The 2000s</h1>
+        <h1>The 2010s</h1>
+        <h1>The 2020s</h1>
+    </div>
     <section class="timeline">
         <ol>
             <li>
@@ -19,12 +34,6 @@
             </li>
         </ol>
     </section>
-
-</head>
-
-<body>
-
 </body>
 
 </html>
-
