closing for the night

--- a/index.html
+++ b/index.html
@@ -25,15 +25,8 @@
         <h1>The 2010s</h1>
         <h1>The 2020s</h1>
     </div>
-    <section class="timeline">
-        <ol>
-            <li>
-                <div>
-                    <time>1923</time>
-                </div>
-            </li>
-        </ol>
-    </section>
+    <div id="car-timeline"></div>
+    <div id="car-details"></div>
 </body>
 
 </html>
