reworked the database to be more usable

--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
 
 <body>
     <div id="decades-navigation">
-        <h1 id="the1920">The 1920s</h1>
-        <h1 id="the30">The 1930s</h1>
-        <h1 id="the40">The 1940s</h1>
-        <h1 id="the50">The 1950s</h1>
-        <h1 id="the60">The 1960s</h1>
-        <h1 id="the70">The 1970s</h1>
-        <h1 id="the80">The 1980s</h1>
-        <h1 id="the90">The 1990s</h1>
-        <h1 id="the00">The 2000s</h1>
-        <h1 id="the10">The 2010s</h1>
-        <h1 id="the2020">The 2020s</h1>
+        <h1 id="the1920">1920s</h1>
+        <h1 id="the30">1930s</h1>
+        <h1 id="the40">1940s</h1>
+        <h1 id="the50">1950s</h1>
+        <h1 id="the60">1960s</h1>
+        <h1 id="the70">1970s</h1>
+        <h1 id="the80">1980s</h1>
+        <h1 id="the90">1990s</h1>
+        <h1 id="the00">2000s</h1>
+        <h1 id="the10">2010s</h1>
+        <h1 id="the2020">2020s</h1>
     </div>
     <div id="car-timeline"></div>
     <div id="car-details"></div>
