--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Assets/le mans logo3.png" type="png">
     <title>100 Years of LeMans</title>
@@ -13,6 +13,7 @@
 
 <body>
     <div id="decades-navigation">
+        <h1 id="all">100 years</h1>
         <h1 id="the1920">1920s</h1>
         <h1 id="the30">1930s</h1>
         <h1 id="the40">1940s</h1>
