--- a/index.html
+++ b/index.html
@@ -5,27 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="index.js"></script>
+    <script defer src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="Assets/le_mans_logo3.png" type="png">
+    <link rel="icon" href="Assets/le mans logo3.png" type="png">
     <title>100 Years of LeMans</title>
-
-    <section class="timeline">
-        <ol>
-            <li>
-                <div>
-                    <time>1923</time>
-                </div>
-            </li>
-        </ol>
-
-    </section>
-
 </head>
 
 <body>
-
+    <div id="decades-navigation">
+        <h1 id="all">100 years</h1>
+        <h1 id="the1920">1920s</h1>
+        <h1 id="the30">1930s</h1>
+        <h1 id="the40">1940s</h1>
+        <h1 id="the50">1950s</h1>
+        <h1 id="the60">1960s</h1>
+        <h1 id="the70">1970s</h1>
+        <h1 id="the80">1980s</h1>
+        <h1 id="the90">1990s</h1>
+        <h1 id="the00">2000s</h1>
+        <h1 id="the10">2010s</h1>
+        <h1 id="the2020">2020s</h1>
+    </div>
+    <div id="car-timeline">
+        <hr>
+    </div>
+    <div id="car-details"></div>
 </body>
 
 </html>
-
