--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <h1 id="the10">2010s</h1>
         <h1 id="the2020">2020s</h1>
     </div>
-    <div id="car-timeline"><hr></div>
+    <div id="car-timeline"></div>
+    <hr>
     <div id="car-details"></div>
 </body>
 
