--- a/index.html
+++ b/index.html
@@ -1,42 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizontal Timeline</title>
+    <script defer src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Assets/le mans logo3.png" type="png">
+    <title>100 Years of LeMans</title>
 </head>
+
 <body>
-    <section class="section intro">
-        <div class="container">
-            <h1>Horizontal Timeline &rarr;</h1>
-        </div>
-    </section>
-    
-    <section class="timeline">
-        <ol>
-            <li>
-                <div>
-                    <h2>1924</h2>
-                    <p></p>
-                </div>
-            </li>
-            <li>
-                <div>
-                    <h2>Event 2</h2>
-                    <p>Description of Event 2</p>
-                </div>
-            </li>
-            <!-- Add more events here -->
-        </ol>
-        <div class="arrows">
-            <button class="arrow arrow__prev disabled" disabled>
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_prev.svg" alt="prev timeline arrow">
-            </button>
-            <button class="arrow arrow__next">
-                <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/arrow_next.svg" alt="next timeline arrow">
-            </button>
-        </div>
-    </section>
+    <div id="decades-navigation">
+        <h1 id="all">100 years</h1>
+        <h1 id="the1920">1920s</h1>
+        <h1 id="the30">1930s</h1>
+        <h1 id="the40">1940s</h1>
+        <h1 id="the50">1950s</h1>
+        <h1 id="the60">1960s</h1>
+        <h1 id="the70">1970s</h1>
+        <h1 id="the80">1980s</h1>
+        <h1 id="the90">1990s</h1>
+        <h1 id="the00">2000s</h1>
+        <h1 id="the10">2010s</h1>
+        <h1 id="the2020">2020s</h1>
+    </div>
+    <div id="car-timeline"><hr></div>
+    <div id="car-details"></div>
 </body>
+
 </html>
