current fonts and styling up

--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
 <body>
     <div id="decades-navigation">
-        <h1 id="all">100 years</h1>
-        <h1 id="the1920">1920s</h1>
-        <h1 id="the30">1930s</h1>
-        <h1 id="the40">1940s</h1>
-        <h1 id="the50">1950s</h1>
-        <h1 id="the60">1960s</h1>
-        <h1 id="the70">1970s</h1>
-        <h1 id="the80">1980s</h1>
-        <h1 id="the90">1990s</h1>
-        <h1 id="the00">2000s</h1>
-        <h1 id="the10">2010s</h1>
-        <h1 id="the2020">2020s</h1>
+        <h1 id="all" class="navigation">100 Years</h1>
+        <h1 id="the1920" class="navigation">1920s</h1>
+        <h1 id="the30" class="navigation">1930s</h1>
+        <h1 id="the40" class="navigation">1940s</h1>
+        <h1 id="the50" class="navigation">1950s</h1>
+        <h1 id="the60" class="navigation">1960s</h1>
+        <h1 id="the70" class="navigation">1970s</h1>
+        <h1 id="the80" class="navigation">1980s</h1>
+        <h1 id="the90" class="navigation">1990s</h1>
+        <h1 id="the00" class="navigation">2000s</h1>
+        <h1 id="the10" class="navigation">2010s</h1>
+        <h1 id="the2020" class="navigation">2020s</h1>
     </div>
     <div id="car-timeline"></div>
     <hr>
