--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <div id="title">
+        <h1>100 Years of LeMans</h1>
+    </div>
     <div id="decades-navigation">
         <h1 id="all" class="navigation">100 Years</h1>
         <h1 id="the1920" class="navigation">1920s</h1>
@@ -29,6 +32,19 @@
     <div id="car-timeline"></div>
     <hr>
     <div id="car-details"></div>
+    <div id="LeMans">
+        <p>
+            The Le Mans 24 Hours, often referred to as the "Grand Prix of Endurance and Efficiency," is one of the
+            world's most prestigious and challenging motorsport events. Held annually near the town of Le Mans, France,
+            the race features a grueling 24-hour endurance format where teams of drivers compete to cover the longest
+            distance possible. The race takes place on the Circuit de la Sarthe, a combination of public roads and
+            purpose-built sections that includes long straights, fast chicanes, and tight corners, testing the limits of
+            both man and machine. Teams compete in various classes, including prototypes and GT cars, with manufacturers
+            and privateer teams vying for overall victory and class honors. The Le Mans 24 Hours is known for its rich
+            history, dramatic battles, and iconic moments, making it a beloved fixture in the world of motorsport and
+            attracting fans and enthusiasts from around the globe.
+        </p>
+    </div>
 </body>
 
 </html>
