finishing for the day

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             both man and machine. Teams compete in various classes, including prototypes and GT cars, with manufacturers
             and privateer teams vying for overall victory and class honors. The Le Mans 24 Hours is known for its rich
             history, dramatic battles, and iconic moments, making it a beloved fixture in the world of motorsport and
-            attracting fans and enthusiasts from around the globe.
+            attracting fans and enthusiasts from around the globe. The creators of this website (Jonathan and Kaleab)
+            have made this website to dedicate to the motorsport turning 100 years old, from 1923-2023 (with the
+            exception of World War 2 and other events.)
         </p>
     </div>
 </body>
