--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=”theme-color” content=”#fc510b”>
     <script defer src="index.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="Assets/le_mans_logo3.png" type="png">
